--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.11"
 Django = "^4.1.1"
 django-debug-toolbar = "^4.2.0"
 pillow = "^10.1.0"
+django-taggit = "^4.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
