--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ django-debug-toolbar = "^4.2.0"
 pillow = "^10.1.0"
 django-taggit = "^4.0.0"
 polog = "^0.0.17"
+psycopg2-binary = "^2.9.9"
+python-decouple = "^3.8"
 
 
 [tool.poetry.group.dev.dependencies]
