--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ django-taggit = "^4.0.0"
 polog = "^0.0.17"
 psycopg2-binary = "^2.9.9"
 python-decouple = "^3.8"
+django-simple-captcha = "^0.5.20"
+redis = "^5.0.1"
+hiredis = "^2.2.3"
 
 
 [tool.poetry.group.dev.dependencies]
