--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ django-simple-captcha = "^0.5.20"
 redis = "^5.0.1"
 hiredis = "^2.2.3"
 rich = "^13.6.0"
+python-json-logger = "^2.0.7"
 
 
 [tool.poetry.group.dev.dependencies]
