--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ redis = "^5.0.1"
 hiredis = "^2.2.3"
 rich = "^13.6.0"
 python-json-logger = "^2.0.7"
+django-ckeditor-5 = "^0.2.10"
 
 
 [tool.poetry.group.dev.dependencies]
